src/renderer/chat/messages/style.scss
@import 'variables';

.container {
  background-color: $background-color;
  color: #fff;
  height: 100%;
  max-width: 100%;
  overflow: scroll;
}

.messageRow {
  display: flex;
  padding: 6px 14px;
  border-top: 1px solid lighten($background-color, 5);

  &:first-child {
    border-top: none;
  }
}

.messageRow + .sameOwner {
  border-top: none;
}

.imgContainer {
  flex: 0 0 42px;
  max-height: 42px;
  margin-right: 7px;

  img {
    width: 42px;
    height: 42px;
    margin-top: 2px;
    border-radius: 50%;
  }
}

.textContainer {
  display: flex;
  flex-direction: column;
}

.name {
  font-weight: bold;
}

.text {
  color: rgb(240, 240, 250);
  word-wrap: break-word;

  a {
    color: rgb(240, 240, 250);
    font-weight: bold;
  }

  code {
    display: block;
    background-color: lighten($background-color, 4);
    color: #fefefe;
    padding: 4px 10px;
    border-radius: 6px;
    border: 1px solid lighten($background-color, 10);
    width: 100%;

    pre {
      white-space: pre-wrap;
      word-wrap: break-word;

      div {
        max-width: 100%;
      }
    }
  }
}

.inline {
  color: #59b5fb;
  display: inline !important;
  padding: 4px !important;
}

.user {
  color: #fefefe;
  font-weight: bold;
}

.text + .text {
  margin-top: 4px;
}

